# MLOps_MIPT

./: README.md  pyproject.toml
mlops_mipt/: k_nearest_neighbor.py
notebooks/: assignment_knn_template.ipynb  knn_assignment_0_01.ipynb
