[tool.poetry]
name = "mlops-mipt"
version = "0.1.0"
description = ""
authors = ["Nikolay Lubin <nklubin@avito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.4.0"
pytest = "^6.2.5"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["mlops_mipt"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
